[package]
name = "log_lammps_reader"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "log_lammps_reader"
crate-type = ["cdylib"]

[dependencies]
polars = "0.46.0"
pyo3 = "0.23.4"
pyo3-polars = "0.20.0"
rayon = "1.10.0"
