[package]
name = "log_lammps_reader"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "log_lammps_reader"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.46.0", features = ["lazy"] }
pyo3 = "0.23.5"
pyo3-polars = "0.20.0"
rayon = "1.10.0"
