[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "log_lammps_reader"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "High-performance Rust library and Python extension for reading LAMMPS log files"
authors = [{name = "Geordy Jomon", email = "gj82@njit.edu"}]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["lammps", "lammps logfile", "lammps log", "log reader", "polars rust"]

[project.urls]
Repository = "https://github.com/GeordyJ/log_lammps_reader"
Issues = "https://github.com/GeordyJ/log_lammps_reader/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
